--- a/config.ini
+++ b/config.ini
@@ -63,3 +63,149 @@ language = zh_CN
 window_width = 1000
 window_height = 700
 auto_connect = true
+
+[virus_scan]
+# 病毒扫描配置
+enable_yara = true
+enable_clamav = false
+enable_signature_check = true
+enable_heuristic = true
+enable_behavior_analysis = false
+scan_timeout = 300
+max_concurrent_scans = 2
+quick_scan_paths = /data/app,/system/app
+deep_scan_paths = /,/system,/data
+exclude_paths = /proc,/sys,/dev
+max_file_size_mb = 100
+scan_archives = true
+scan_compressed = true
+
+[threat_analysis]
+# 威胁分析配置
+risk_threshold = 0.7
+auto_quarantine = false
+require_user_confirmation = true
+analysis_depth = deep
+permission_weight = 0.4
+behavior_weight = 0.3
+signature_weight = 0.2
+environment_weight = 0.1
+confidence_threshold = 0.6
+threat_level_mapping = LOW:0.3,MEDIUM:0.5,HIGH:0.7,CRITICAL:0.9
+
+[signature_database]
+# 病毒特征库配置
+db_path = data/virus_signatures
+hash_db_file = malware_hashes.json
+yara_rules_path = data/yara_rules
+package_rules_file = malicious_packages.json
+network_iocs_file = network_iocs.json
+auto_update = true
+update_interval_hours = 24
+update_url = https://api.virusdb.com/signatures
+backup_count = 5
+verify_signatures = true
+
+[detection_engines]
+# 检测引擎配置
+yara_engine_enabled = true
+clamav_engine_enabled = false
+signature_engine_enabled = true
+heuristic_engine_enabled = true
+behavior_engine_enabled = false
+cloud_engine_enabled = false
+max_parallel_engines = 3
+engine_timeout = 120
+fallback_to_signature = true
+
+[patch_management]
+# 补丁管理配置
+auto_download = true
+patch_repository_url = https://security-patches.example.com
+local_cache_path = data/patches
+check_interval_hours = 24
+install_critical_auto = false
+install_high_auto = false
+max_concurrent_downloads = 3
+patch_verification = true
+rollback_enabled = true
+max_patch_age_days = 90
+
+[vulnerability_scanner]
+# 漏洞扫描配置
+cve_database_path = data/cve_database
+local_cve_cache = true
+cve_update_interval = 24
+vuln_scan_timeout = 600
+max_cve_age_days = 365
+severity_filter = CRITICAL,HIGH,MEDIUM
+platform_filter = android
+component_scan_enabled = true
+
+[real_time_protection]
+# 实时防护配置
+enable_file_monitor = true
+enable_process_monitor = true
+enable_network_monitor = false
+response_timeout = 30
+log_all_events = true
+quarantine_on_detection = true
+notify_user = true
+monitor_intervals = 30
+max_events_per_minute = 100
+event_retention_days = 7
+
+[quarantine]
+# 隔离管理配置
+quarantine_path = data/quarantine
+max_quarantine_size_gb = 5
+auto_cleanup_days = 30
+encrypt_quarantine = true
+compress_files = true
+log_quarantine_actions = true
+allow_restoration = true
+require_admin_approval = false
+
+[cloud_services]
+# 云服务配置
+enable_cloud_lookup = false
+cloud_api_endpoint = https://api.virustotal.com/vtapi/v2
+api_timeout = 30
+max_cloud_requests_per_hour = 100
+cache_cloud_results = true
+cloud_result_ttl_hours = 24
+anonymize_uploads = true
+
+[performance]
+# 性能优化配置
+max_worker_threads = 4
+memory_limit_mb = 512
+cache_enabled = true
+cache_size_mb = 128
+cache_ttl_minutes = 60
+batch_processing = true
+batch_size = 50
+use_memory_mapping = true
+compress_cache = true
+
+[database]
+# 数据库配置
+db_type = sqlite
+db_path = data/security.db
+connection_pool_size = 5
+backup_interval_hours = 6
+vacuum_interval_days = 7
+encrypt_database = false
+index_optimization = true
+query_timeout = 30
+
+[reporting]
+# 报告系统配置
+enable_detailed_reports = true
+report_output_path = reports/
+report_formats = json,html,pdf
+include_screenshots = false
+compress_reports = true
+report_retention_days = 90
+auto_email_reports = false
+report_template_path = templates/
